--- a/src/translations/zh.json
+++ b/src/translations/zh.json
@@ -50,7 +50,7 @@
   "infinity.scenes.StreamTab.Widgets.show": "表示",
   "infinity.scenes.StreamTab.Modals.createdAt": "创造时间",
   "infinity.scenes.Topic.Menu.title": "菜单",
-  "infinity.scenes.Topic.homeButton": "回来",
+  "infinity.scenes.Topic.homeButton": "回去",
   "infinity.scenes.Topic.close": "关",
   "infinity.scenes.Topic.TopicBody.edit": "编辑",
   "infinity.scenes.Topic.TopicBody.draft": "草稿",
@@ -80,7 +80,7 @@
   "infinity.scenes.TopicView.submitError": "表单提交错误",
   "infinity.scenes.TopicView.success": "成功",
   "infinity.scenes.TopicView.available": "您的话题的地址:",
-  "infinity.scenes.TopicView.back": "回来",
+  "infinity.scenes.TopicView.back": "回去",
   "infinity.scenes.TopicView.toPost": "发布一个话题",
   "infinity.scenes.TopicView.save": "保存",
   "infinity.scenes.TopicView.create": "创造",
