--- a/src/translations/ja.json
+++ b/src/translations/ja.json
@@ -139,7 +139,7 @@
   "infinity.components.ServerSelect.server": "サーバ",
   "infinity.components.Menu.newTopic": "新規トピック",
   "infinity.components.Menu.home": "ホーム",
-  "infinity.components.Menu.what": "これは何ですか？",
+  "infinity.components.Menu.what": "何ですか？",
   "infinity.components.Menu.signOut": "ログアウト",
   "infinity.components.Menu.signIn": "ログイン",
   "infinity.components.Menu.how": "使え方は？",
