add some language/introduction changes

--- a/src/translations/ja.json
+++ b/src/translations/ja.json
@@ -110,7 +110,7 @@
   "infinity.scenes.TopicView.topicTitle": "トピックタイトル",
   "infinity.scenes.TopicView.parents": "親トピック",
   "infinity.scenes.TopicView.draft": "ドラフト",
-  "infinity.scenes.TopicView.public": "公共",
+  "infinity.scenes.TopicView.public": "公的",
   "infinity.scenes.TopicList.types": "タイプ",
   "infinity.scenes.UserTransactions.homeLink": "ホーム",
   "infinity.scenes.UserTransactions.by": "投資",
