--- a/src/translations/zh.json
+++ b/src/translations/zh.json
@@ -96,7 +96,7 @@
   "infinity.scenes.TopicView.topicTitle": "标题",
   "infinity.scenes.TopicView.parents": "上一级话题",
   "infinity.scenes.TopicView.draft": "草稿",
-  "infinity.scenes.TopicView.public": "发布",
+  "infinity.scenes.TopicView.public": "公开",
   "infinity.scenes.TopicList.types": "种类",
   "infinity.scenes.UserTransactions.homeLink": "首页",
   "infinity.scenes.UserTransactions.by": "投资历史",
