create prizes tags

--- a/src/translations/de.json
+++ b/src/translations/de.json
@@ -1,3 +1,6 @@
 {
-  "infinity.components.Header.title": "Unendlichkeitsfamilie"
+  "infinity.components.Header.title": "Unendlichkeitsfamilie",
+  "infinity.components.TopicFundData.prize": "Preis",
+  "infinity.components.TopicFundData.topicPrizeTooltip":
+    "Der Betrag, der für jemanden vergeben wird, der diese Herausforderung löst."
 }
