--- a/src/translations/ja.json
+++ b/src/translations/ja.json
@@ -159,6 +159,14 @@
   "infinity.components.ProgramToggle.programs": "プログラム",
   "infinity.components.ProgramToggle.importingToolip":
     "プログラムのインポートすぐにリリースされる予定です...",
+  "infinity.components.ProgramToggle.all": "全て",
+  "infinity.components.ProgramToggle.need": "必要",
+  "infinity.components.ProgramToggle.goal": "目的",
+  "infinity.components.ProgramToggle.idea": "方法",
+  "infinity.components.ProgramToggle.plan": "計画",
+  "infinity.components.ProgramToggle.step": "段階",
+  "infinity.components.ProgramToggle.task": "用事",
+  "infinity.components.ProgramToggle.bug": "バグ",
   "infinity.components.SignInLine.signIn": "ログイン",
   "infinity.components.TabDataField.dataField": "データフィールド",
   "infinity.components.TabDataField.putData": "あなたのデータをここに入れる",
