--- a/src/translations/lt.json
+++ b/src/translations/lt.json
@@ -158,9 +158,16 @@
   "infinity.components.PayCheckout.card": "Kortelės numeris",
   "infinity.components.PayCheckout.zip": "Pašto kodas",
   "infinity.components.PayCheckout.toFund": "finansuoti projektą",
-  "infinity.components.ProgramToggle.programs": "Programos",
+  "infinity.components.ProgramToggle.programs": "Kodas",
   "infinity.components.ProgramToggle.importingToolip":
     "Visų programų importo galimybės ruošiamos išlesti...",
+  "infinity.components.ProgramToggle.all": "Viskas",
+  "infinity.components.ProgramToggle.need": "Poreikiai",
+  "infinity.components.ProgramToggle.goal": "Tikslai",
+  "infinity.components.ProgramToggle.idea": "Idėjos",
+  "infinity.components.ProgramToggle.plan": "Planai",
+  "infinity.components.ProgramToggle.step": "Etapai",
+  "infinity.components.ProgramToggle.task": "Užduotys",
   "infinity.components.SignInLine.signIn": "Prisijungti",
   "infinity.components.TabDataField.dataField": "Duomenų lauką",
   "infinity.components.TabDataField.putData": "Įveskite duomenis čia",
