--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -159,6 +159,14 @@
   "infinity.components.ProgramToggle.programs": "Программы",
   "infinity.components.ProgramToggle.importingToolip":
     "Возможность импорта программ будет добавлена...",
+  "infinity.components.ProgramToggle.all": "Все",
+  "infinity.components.ProgramToggle.need": "Запрос",
+  "infinity.components.ProgramToggle.goal": "Цель",
+  "infinity.components.ProgramToggle.idea": "Идея",
+  "infinity.components.ProgramToggle.plan": "План",
+  "infinity.components.ProgramToggle.step": "Шаг",
+  "infinity.components.ProgramToggle.task": "Задача",
+  "infinity.components.ProgramToggle.bug": "Ошибки",
   "infinity.components.SignInLine.signIn": "Нажмите войти",
   "infinity.components.TabDataField.dataField": "Поле данных",
   "infinity.components.TabDataField.putData": "Введите ваши данные",
