--- a/src/translations/zh.json
+++ b/src/translations/zh.json
@@ -143,6 +143,14 @@
   "infinity.components.ProgramToggle.programs": "程序",
   "infinity.components.ProgramToggle.importingToolip":
     "导入程序功能即将发布...",
+  "infinity.components.ProgramToggle.all": "全部",
+  "infinity.components.ProgramToggle.need": "需要",
+  "infinity.components.ProgramToggle.goal": "目标",
+  "infinity.components.ProgramToggle.idea": "想法",
+  "infinity.components.ProgramToggle.plan": "计划",
+  "infinity.components.ProgramToggle.step": "步骤",
+  "infinity.components.ProgramToggle.task": "任务",
+  "infinity.components.ProgramToggle.bug": "错误报告",
   "infinity.components.SignInLine.signIn": "登录",
   "infinity.components.TabDataField.dataField": "数据字段",
   "infinity.components.TabDataField.putData": "请输入您的数据",
