--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -161,12 +161,13 @@
     "Возможность импорта программ будет добавлена...",
   "infinity.components.ProgramToggle.all": "Все",
   "infinity.components.ProgramToggle.need": "Запрос",
-  "infinity.components.ProgramToggle.goal": "Цель",
-  "infinity.components.ProgramToggle.idea": "Идея",
-  "infinity.components.ProgramToggle.plan": "План",
+  "infinity.components.ProgramToggle.goal": "Цели",
+  "infinity.components.ProgramToggle.idea": "Идеи",
+  "infinity.components.ProgramToggle.plan": "Планы",
   "infinity.components.ProgramToggle.step": "Шаг",
   "infinity.components.ProgramToggle.task": "Задача",
   "infinity.components.ProgramToggle.bug": "Ошибки",
+  "infinity.components.ProgramToggle.data": "Данные",
   "infinity.components.SignInLine.signIn": "Нажмите войти",
   "infinity.components.TabDataField.dataField": "Поле данных",
   "infinity.components.TabDataField.putData": "Введите ваши данные",
